--- a/css/styles.css
+++ b/css/styles.css
@@ -15,34 +15,33 @@ body {
   margin: 0;
   text-align: center;
   font-family: 'Ubuntu', sans-serif;
+  color: #EEEEEE;
+  background-color: #222831;
 }
 
 h1 {
   font-size: 7.5rem;
   margin: 120px auto 0 auto;
   font-family: 'Sacramento', cursive;
+  color: #00989e;
 }
 
 h2 {
   font-family: 'Rubik', sans-serif;
   font-size: 2.5rem;
+  color: #00ADB5;
 }
 
 h3 {
   font-family: 'Rubik', sans-serif;
 }
 
+a {
+  color: #393E46;
+}
+
 
 /* *************************************************************************************CLASSES************************************************************************************************************** */
-
-.top-container {
-  background-color: #00ADB5;
-  padding-top: 222px;
-}
-
-.middle-container {
-
-}
 
 .bottom-container {
 
@@ -54,6 +53,34 @@ h3 {
   left: 500px;
 }
 
+.contact-text > :first-child {
+  margin: 10px auto 3px auto;
+}
+
+.contact-text > p {
+  margin: auto auto 12px auto;
+}
+
+.copyright-text {
+  background-color: #393E46;
+  padding: 10px 0 10px 0;
+  margin: 10px auto auto auto;
+  position: relative;
+  top: 1.2rem;
+}
+
+.footer-area {
+  margin-top: 30px;
+  background-color: #00ADB5;
+  height: 225px;
+}
+
+.get-in-touch {
+  color: #EEEEEE;
+  margin: 0;
+  padding: 15px 0 3px 0;
+}
+
 .main-text-secondary /* a web developer text */ {
   font-family: 'Rubik', sans-serif;
   position: relative;
@@ -61,9 +88,35 @@ h3 {
   font-size: 2rem;
 }
 
+.middle-container {
+
+}
+
 .mountain-img{
   position: relative;
   top: 3px;
+}
+
+.my-skills-text {
+  margin: 1.5rem auto 0 auto;
+}
+
+.profile-picture {
+  width: 250px;
+  padding-top: 35px;
+}
+
+.section-separator {
+  border: dotted;
+  border-width: 0.5rem 0 0 0;
+  color: #393E46;
+  margin: 45px auto 0 auto;
+  width: 9rem;
+}
+
+.skill-image {
+  width: 300px;
+  margin: 30px auto 20px auto;
 }
 
 .top-cloud {
@@ -72,15 +125,12 @@ h3 {
   right: 450px;
 }
 
+.top-container {
+  background-color: #00ADB5;
+  padding-top: 222px;
+}
+
 .web-underlined {
   text-decoration: underline;
-}
-
-.profile-picture {
-  width: 250px;
-  padding-top: 35px;
-}
-
-.skill-image {
-  width: 300px;
+  color: #00989e;
 }
