Updated Website Landing
Changed the mountains theme to something more dark-themed.

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,14 +16,17 @@ body {
   text-align: center;
   font-family: 'Ubuntu', sans-serif;
   color: #EEEEEE;
-  background-color: #222831;
 }
 
 h1 {
-  font-size: 7.5rem;
-  margin: 120px auto 0 auto;
-  font-family: 'Sacramento', cursive;
   color: #00989e;
+  font-family: 'Sacramento', cursive;
+  font-size: 7.5rem;
+  margin: auto auto auto auto;
+  left: 0;
+  right: 0;
+  top: 4rem;
+  position: absolute;
 }
 
 h2 {
@@ -47,11 +50,11 @@ a {
 
 }
 
-.bottom-cloud {
+/* .bottom-cloud {
   position: absolute;
   top: 39rem;
   left: 31.25rem;
-}
+} */
 
 .contact-text > :first-child {
   margin: 10px auto 3px auto;
@@ -70,7 +73,6 @@ a {
 }
 
 .footer-area {
-  margin-top: 30px;
   background-color: #00ADB5;
   height: 225px;
 }
@@ -83,22 +85,27 @@ a {
 
 .main-text-secondary /* a web developer text */ {
   font-family: 'Rubik', sans-serif;
-  position: relative;
-  bottom: 45px;
-  font-size: 2rem;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 10.5rem;
+  font-size: 1.75rem;
 }
 
 .middle-container {
-
+  background-color: #222831;
+  padding-bottom: 20px;
+  position: relative;
+  z-index: 1;
 }
 
-.mountain-img {
+/* .mountain-img {
   position: absolute;
   bottom: 0;
 }
 .mountain-img-hidden {
   visibility: hidden;
-}
+} */
 
 .my-skills-text {
   margin: 1.5rem auto auto auto;
@@ -109,11 +116,16 @@ a {
   padding-top: 35px;
 }
 
+.section-separator-container {
+  background-color: #222831;
+  padding: 45px 0 30px 0;
+}
+
 .section-separator {
   border: dotted;
   border-width: 0.5rem 0 0 0;
+  margin: auto;
   color: #393E46;
-  margin: 45px auto 0 auto;
   width: 9rem;
 }
 
@@ -122,16 +134,27 @@ a {
   margin: 30px auto 20px auto;
 }
 
-.top-cloud {
+/* .top-cloud {
   position: absolute;
   top: 16.875rem;
   right: 28.125rem;
-}
+} */
 
 .top-container {
-  background-color: #00ADB5;
-  padding-top: 222px;
+  background-color: #393E46;
+  padding-top: 350px;
   position: relative;
+  z-index: 1;
+}
+
+.top-container-img {
+  width: 250px;
+  position: absolute;
+  margin: auto;
+  left: 0;
+  right: 0;
+  top: 15rem;
+  z-index: -1;
 }
 
 .web-underlined {
