--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,12 @@ a {
   left: 31.25rem;
 } */
 
+.contact-icon {
+  width: 12rem;
+  padding: 10px 5px 0 5px;
+  position: relative;
+}
+
 .contact-text > :first-child {
   margin: 10px auto 3px auto;
 }
@@ -87,7 +93,13 @@ a {
 
 .footer-area {
   background-color: #00ADB5;
-  height: 225px;
+}
+
+.footer-icon {
+  width: 2rem;
+  position: relative;
+  top: 5px;
+  padding: 10px 5px 0px 5px;
 }
 
 .get-in-touch {
@@ -107,7 +119,7 @@ a {
 
 .middle-container {
   background-color: #222831;
-  padding-bottom: 20px;
+  padding-bottom: 40px;
   position: relative;
 }
 
@@ -139,11 +151,30 @@ a {
   margin: auto;
   color: #393E46;
   width: 9rem;
+  display: block;
 }
 
-.skill-image {
-  width: 300px;
-  margin: 30px auto 20px auto;
+.skill-code {
+  width: 12rem;
+  margin-right: 30px;
+  float: left;
+  position: relative;
+  top: 0.5rem;
+}
+
+.skill-video-editing {
+  width: 10rem;
+  margin-left: 30px;
+  float: right;
+  position: relative;
+  bottom: 1rem;
+}
+
+.skill-row {
+  width: 50%;
+  margin: 100px auto 100px auto;
+  text-align: left;
+  line-height: 2;
 }
 
 /* .top-cloud {
