--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@ body {
   text-align: center;
   font-family: 'Ubuntu', sans-serif;
   color: #EEEEEE;
+  background-color: #222831;
 }
 
 h1 {
@@ -104,6 +105,7 @@ a {
 
 .middle-container {
   background-color: #222831;
+  padding-top: 150px;
   padding-bottom: 40px;
   position: relative;
 }
@@ -119,6 +121,7 @@ a {
 .profile-picture {
   width: 250px;
   padding-top: 35px;
+  padding-bottom: 120px;
 }
 
 .section-separator {
