--- a/css/fonts/style.css
+++ b/css/fonts/style.css
@@ -4,7 +4,7 @@
     font-family: 'Segoe UI';
     font-style: normal;
     font-weight: normal;
-    src: local('Segoe UI'), url('Segoe UI.woff') format('woff');
+    src: local('Segoe UI'), url('./fonts/Segoe UI.woff') format('woff');
     }
     
 
@@ -12,7 +12,7 @@
     font-family: 'Segoe UI Bold';
     font-style: normal;
     font-weight: normal;
-    src: local('Segoe UI Bold'), url('Segoe UI Bold.woff') format('woff');
+    src: local('Segoe UI Bold'), url(./fonts/'Segoe UI Bold.woff') format('woff');
     }
     
 
@@ -20,7 +20,7 @@
     font-family: 'Segoe UI Bold Italic';
     font-style: normal;
     font-weight: normal;
-    src: local('Segoe UI Bold'), url('Segoe UI Bold.woff') format('woff');
+    src: local('Segoe UI Bold'), url('./fonts/Segoe UI Bold.woff') format('woff');
     }
 
 	
@@ -29,7 +29,7 @@
     font-family: "Segoe UI Light";
     font-style: normal;
     font-weight: normal;
-    src: local('Segoe UI Light'), url('/fonts/Segoe UI Light.woff') format('woff');
+    src: local('Segoe UI Light'), url('./fonts/Segoe UI Light.woff') format('woff');
     }
 
 
@@ -37,5 +37,5 @@
     font-family: "Segoe UI Semibold";
     font-style: normal;
     font-weight: normal;
-    src: local('Segoe UI Semibold'), url('/fonts/Segoe UI Semibold.woff') format("woff');
+    src: local('Segoe UI Semibold'), url('./fonts/Segoe UI Semibold.woff') format("woff');
     }
