--- a/css/fonts/style.css
+++ b/css/fonts/style.css
@@ -12,7 +12,7 @@
     font-family: 'Segoe UI Bold';
     font-style: normal;
     font-weight: normal;
-    src: local('Segoe UI Bold'), url(./fonts/'Segoe UI Bold.woff') format('woff');
+    src: local('Segoe UI Bold'), url('./fonts/Segoe UI Bold.woff') format('woff');
     }
     
 
